--- a/templates/index.html
+++ b/templates/index.html
@@ -616,6 +616,8 @@
                     name="priority"
                     style="width: 50%; border: 2px solid darkgray;"
                     placeholder="Priority (1..10)"
+                    min="1"
+                    max="10"
                     required
                   />
                 </td>
