--- a/templates/index.html
+++ b/templates/index.html
@@ -614,7 +614,7 @@
                   <input
                     type="number"
                     name="priority"
-                    style="width: 50%; border: 2px solid darkgray;"
+                    style="width: 50%; border: 2px solid rgb(166, 166, 166);"
                     placeholder="Priority (1..10)"
                     min="1"
                     max="10"
