Resolved svg path

--- a/templates/index.html
+++ b/templates/index.html
@@ -393,7 +393,7 @@
 
         <a href="/logout" class="logout-btn">
           <span> Logout </span>
-          <img src="static/images/logout.svg" style="height: 24px; width: 24px" />
+          <img src="static/assets/logout.svg" style="height: 24px; width: 24px" />
         </a>
       </nav>
 
@@ -454,7 +454,7 @@
               cursor: pointer;
             "
           >
-            <img src="static/images/search.svg" style="height: 24px; width: 24px" />
+            <img src="static/assets/search.svg" style="height: 24px; width: 24px" />
           </button>
 
         </form>
@@ -500,7 +500,7 @@
                     style="margin-right: 10px"
                   >
                     <img
-                      src="static/images/{{task['done']}}.svg"
+                      src="static/assets/{{task['done']}}.svg"
                       style="height: 28px; width: 28px"
                     />
                   </a>
