Changed back heading color to white

--- a/templates/index.html
+++ b/templates/index.html
@@ -359,7 +359,7 @@
 
       <!-- Sidebar -->
       <nav>
-        <h1 style="margin-top: 16px; color: #6a00ff;">{{ heading }}</h1>
+        <h1 style="margin-top: 16px">{{ heading }}</h1>
 
         <hr />
 
