--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>{{ title }}</title>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='assets/style.css')}}" />
+    <link rel="shortcut icon" href="/static/assets/favicon.ico" type="image/x-icon" />
 
     <style>
       /* General Styles */
