--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>{{ title }}</title>
+    <link rel="shortcut icon" href="/static/assets/favicon.ico" type="image/x-icon" />
+
     <style>
         *{
             margin: 0;
