--- a/templates/searchlist.html
+++ b/templates/searchlist.html
@@ -101,7 +101,7 @@
         color: #4169e1;
       }
     </style>
-    <link rel="shortcut icon" href="/static/assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
 
   </head>
 
