Revert back heading color to default

--- a/templates/index.html
+++ b/templates/index.html
@@ -360,7 +360,7 @@
 
       <!-- Sidebar -->
       <nav>
-        <h1 style="margin-top: 16px; color: #6495ed;">{{ heading }}</h1>
+        <h1 style="margin-top: 16px">{{ heading }}</h1>
 
         <hr />
 
